# flowi

./: .exrc  .gitignore  =  Cargo.old  Cargo.toml  LICENSE  README.md  build.rs  compile_commands.json  coverage.info  foo.txt  imgui.ini  out.txt  output.map  tundra.lua  units.bgfx.lua  units.flowi.lua  units.lua
.github/workflows/: ci.yml
api/: application.def  application_settings.def  button.def  context.def  debug.def  error.def  font.def  image.def  io.def  item.def  layout.def  math_data.def  menu.def  painter.def  render_commands.def  shader.def  style.def  text.def  ui.def  window.def
api/core/: error.def  font.def  image.def  layout.def  math.def  math_data.def  pods.def  render_commands.def  style.def  ui.def
api/flowi/: application.def  window.def
api_gen/: Cargo.toml  foo.txt
api_gen/defs/: render_commands.def
api_gen/src/: api.pest  api_parser.rs  c_gen.rs  lints.rs  main.rs  rust_gen.rs
c_cpp/: application.cpp  area.c  flowi.cpp  font.cpp  font_private.h  image.c  imgui_wrap.cpp  internal.h  io.cpp  layout.c  layout_private.h  math.ispc  metal_workaround.mm  render.h  style_internal.h  text.c
core/bench/: atlas_bench.c  bench_main.c
core/include/: config.h  error.h  flowi_render.h  layout.h  pods.h  render_commands.h  string.h
core/rust/: build.rs
core/src/: allocator.h  area.c  area.h  array.h  atlas.c  atlas.h  command_buffer.h  flowi.c  flowi.h  flowi_font.c  flowi_font.h  font.c  font.h  font_private.h  internal.h  io.c  layout.c  layout_private.h  linear_allocator.c  linear_allocator.h  primitives.c  primitives.h  render.c  render.h  simd.h  simd_sse.inl  string.h  style.c  style.h  style_internal.h  text.c  text.h  types.h  vertex_allocator.c  (+1 more)
examples/: area_text.c  test_font.rs  testbed.c
flowi-dear-imgui/: Cargo.toml  build.rs
flowi-image/: Cargo.toml
flowi-render/: Cargo.toml  build.rs
flowi-rust/: Cargo.toml  build.rs
flowi-rust/c_src/: allocator.h  application.cpp  command_buffer.c  flowi.cpp  flowi.h  font.cpp  handles.c  io.c  primitive_rect.h  primitives.h  text.h  types.h  utils.h
flowi-ui/: Cargo.toml  build.rs
flowi-utils/: Cargo.toml
flowi-window/: Cargo.toml  build.rs
flowi_c/: font_cache.c
rust/flowi/: Cargo.toml  build.rs
rust/flowi/src/: application.rs  button.rs  context.rs  debug.rs  error.rs  font.rs  image.rs  layout.rs  lib.rs  manual.rs  math_data.rs  painter.rs  render_commands.rs  style.rs  text.rs  ui.rs  window.rs
src/: application.cpp  application.rs  atlas.c  atlas.h  bgfx_renderer.rs  button.rs  error.rs  flowi.cpp  flowi_internal.h  font.cpp  glfw_window.rs  image.c  image.rs  image_private.h  imgui.rs  imgui_wrap.cpp  internal.h  internal_error.rs  io.c  io.rs  io_handler.rs  layer.h  lib.rs  manual.rs  primitive_rect.c  primitives.c  render.h  shader.rs  shaders.rs  style.cpp  style.rs  ui.rs  vertex_allocator.h
temp/: bgfx_frame159.rdc  bgfx_frame175.rdc  bgfx_frame199.rdc
tests/: area_tests.c  font_tests.c  input_tests.c  layout_tests.c  linear_allocator_tests.c  primitive_tests.c  string_allocator_tests.c  style_tests.c  text_tests.c  vertex_allocator_tests.c
(+1705 files in other folders)
