[package]
name = "flowi"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bitflags = "2.0.0-rc.1"
libloading = { version = "0.7.4", optional = true }
notify = { version = "5.1.0", optional = true }

[features]
reload_assets = ["notify"]
### Build and link all the code the code the program
static = []
### Only include wrapping functionally, but allow for loading the shared object 
dynamic = ["libloading"]
### Only include the wrapper API
plugin = []

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[workspace]
members = [
    "examples/rust/testbed",
    "examples/rust/plugin_example",
]
exclude = [
    "tools/api_gen", 
]

