[package]
name = "flowi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
bitflags = "2.0.0-rc.1"
freetype-sys = "0.17.0"

[features]
static = []
dynamic = []
